fix scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,9 @@ html, body {
   bottom: 0;
   left: 0;
   right: 0;
-
-  display: flex;
+  background-color: black !important;
+  color: white;
   box-sizing:border-box;
-  overflow-y: scroll;
-  overflow-x: none;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -17,15 +15,13 @@ html, body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #000;
-  color: white;
 }
 
 div#root {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100%;
 }
 
